# Embedded_Linux_Tasks

Embedded_Linux_Task_4/: README.md
Embedded_Linux_Task_4/00_LIB/: Bitmath.h  STD_Types.h
Embedded_Linux_Task_4/01_MCAL/00_DIO/: DIO.c  DIO.h  DIO_Config.c  DIO_Config.h
Embedded_Linux_Task_4/01_MCAL/01_PORT/: PORT.c  PORT.h  PORT_Config.c  PORT_Config.h
Embedded_Linux_Task_4/03_APP/LAB1/: main.c  main.elf
Embedded_Linux_Task_4/Debug/: Makefile  SrcCode.elf  SrcCode.hex  SrcCode.lss  SrcCode.map  SrcCode.srec  makedep.mk
Embedded_Linux_Task_4/Debug/01_MCAL/00_DIO/: DIO.d  DIO_Config.d
Embedded_Linux_Task_4/Debug/01_MCAL/01_PORT/: PORT.d  PORT_Config.d
Embedded_Linux_Task_4/Debug/03_APP/LAB1/: main.d
Embedded_Linux_Task_4/Debug/03_APP/LAB2/: main.d
Embedded_Linux_Task_5/Cmake_Task/Abstraction/Dynamic/: CMakeLists.txt
Embedded_Linux_Task_5/Cmake_Task/Abstraction/Dynamic/lib/: CMakeLists.txt
Embedded_Linux_Task_5/Cmake_Task/Abstraction/Static/: CMakeLists.txt  CMakeLists.txt.save
Embedded_Linux_Task_5/Cmake_Task/Abstraction/Static/lib/: CMakeLists.txt
Embedded_Linux_Task_5/Cmake_Task/No_Abstraction/Dynamic/: CMakeLists.txt
Embedded_Linux_Task_5/Cmake_Task/No_Abstraction/Static/: CMakeLists.txt
